# emulation_analysis

./: .gitignore  bar.html  barPlot.js  checkbox.js  clean_data.py  csvLoader.js  dropdown.js  index.html  index.js  line.html  linePlot.js  menuResponses.js  package-lock.json  parity.html  parity.js  parityPlot.js  plot.html  plotting.js  pyproject.toml  quantity.html  quantityPlot.js  rnn.html  rnnPlot.js  styles.css  temporal.html  temporalPlot.js  workflow.html
data/predicted/: bar.csv  bar_r2.csv  bar_r2_se.csv  quant.csv  rnn_parity_full.csv  rnn_r2_bar.csv  temporal.csv  temporal_r2.csv  topo_spatial_r2.csv  transformed_quant.csv  transformed_quant_ci.csv  transformed_quant_se.csv  transformed_temporal.csv  transformed_temporal_ci.csv  transformed_temporal_se.csv
data/true/: C-feature_0.0_metric_15-04032023.csv  C-feature_0.0_metric_8-04032023.csv  CH-feature_0.0_metric_15-04032023.csv  (+1 more)
figure_browser/: barPlot.js  clean_data.py  csvLoader.js  diff.html  diffBarPlot.js  diffPlot.js  figure_maker.py  index.html  package-lock.json  package.json  parityPlot.js  pca.html  pcaPlot.js  plotting.js  quantityPlot.js  rnn.html  rnnPlot.js  styles.css  temporal.html  temporalPlot.js  training.html  trainingPlot.js
pca/: C-X_test_15.csv  C-X_train_15.csv  CH-X_test_15.csv  CH-X_train_15.csv  TEST_C-synthetic_data-072323.csv  TEST_CH-synthetic_data-072323.csv  TRAIN_C-synthetic_data-072323.csv  TRAIN_CH-synthetic_data-072323.csv  rnn_exp.ipynb
rnn/: rnn.py  target_models.py  utils.py
vasculature_graphs/: __main__.py  arcade_config.yaml
(+234818 files in other folders)
