[tool.poetry]
name = "emulation-analysis"
version = "0.1.0"
description = ""
authors = ["Jacob Evarts <jacob.i.evarts@gmail.com>"]
readme = "README.md"
packages = [{include = "emulation_analysis"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
numpy = "1.24.3"
seaborn = "^0.12.2"
scikit-learn = "^1.3.0"
tensorflow = "^2.13.0"
black = "^23.7.0"
mypy = "^1.4.1"
pylint = "^2.17.5"
statsmodels = "^0.14.0"
regex = "^2023.6.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
